--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,6 @@
 # Project information
-site_name: DVC_Mkdocs_Templates
+site_name: NLP_DVC_Project
+
 # defeine TOC or order of website-
 nav:
   - Home: index.md
@@ -9,8 +10,8 @@ site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: bhushanpatil3554/DVC_Mkdocs_Templates
-repo_url: https://github.com/bhushanpatil3554/DVC_Mkdocs_Templates
+repo_name: bhushanpatil3554/NLP_DVC_Project
+repo_url: https://github.com/bhushanpatil3554/NLP_DVC_Project
 
 # Configuration
 theme:
