--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ Scikit-learn
 lxml
 
 ### local packages -
-# -e . # << uncomment this to install from setup.py
+-e . # << uncomment this to install from setup.py
