--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_name: NLP_DVC_Project
 # defeine TOC or order of website-
 nav:
   - Home: index.md
+  - Data-prep_stage: data_prep.md
 
 site_author: Bhushan Narayan Patil
 site_description: >-
